--- a/resources/node.ui
+++ b/resources/node.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>205</width>
-    <height>96</height>
+    <width>371</width>
+    <height>142</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,24 +17,32 @@
    <string notr="true">QWidget {
 	background: white; 
 }
+
+#type_text {
+	font-weight: bold;
+}
+
+#node {
+	border-radius: 5px;
+}
+
 #type, #subtype, #node { 
 	border: 2px solid black;
-	border-radius: 4px;
 }
 </string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="bottomMargin">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="spacing">
     <number>0</number>
@@ -42,6 +50,18 @@
    <item row="0" column="0">
     <widget class="QWidget" name="type" native="true">
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
       <item>
        <widget class="QLabel" name="type_text">
         <property name="text">
@@ -58,6 +78,18 @@
    <item row="0" column="1">
     <widget class="QWidget" name="subtype" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
       <item>
        <widget class="QLabel" name="subtype_text">
         <property name="text">
