visualization: rework of low level trace API to support multiple features:
- allow multiple trace elements in one single trace
- highlighting of arbitrary nodes from all graph types
  (before this commit only Callgraph highlighting was possible)
- reset trace changes if trace view is over and we jump to next step
- trace elements can set entry points
  (this allows us to expand CFG on highlighting of unvisible node)
- implemented ResetPartialChangesTraceElement to allow undo of
  one or multiple trace elements

--- a/resources/instance_node.ui
+++ b/resources/instance_node.ui
@@ -27,6 +27,22 @@
 	border: 2px solid black;
 	border-radius: 5px;
 }
+
+#instance_node[highlighted=&quot;1&quot;] {
+	border-color: red;
+}
+
+#instance_node[highlighted=&quot;2&quot;] {
+	border-color: aqua;
+}
+
+#instance_node[highlighted=&quot;3&quot;] {
+	border-color: rgb(0,255,0);
+}
+
+#instance_node[highlighted=&quot;4&quot;] {
+	border-color: orange;
+}
 </string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
