visualization: implement SVFG graph filtering
All nodes in svfg_expansion_points will be rendered and their direct neighbors.
The graph is explorable via mouse clicks.
The current start expansion point is random. This needs to be improved in the future.

--- a/resources/svfg_node.ui
+++ b/resources/svfg_node.ui
@@ -28,6 +28,10 @@
 	border-radius: 5px;
 }
 
+#svfg_node[adjacency=&quot;true&quot;]{
+	border-color: lightgrey;
+}
+
 #svfg_node[highlighted=&quot;1&quot;] {
 	border-color: red;
 }
